# StringFileGenerator

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp
books/: on_liberty.txt
cmake/: CppStr.cmake  StringFileGenerator.cmake
